--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.1",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.15.1",
+    "leva": "^0.9.34",
+    "postprocessing": "^6.33.2",
+    "r3f-perf": "6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.150.1"
